src/objects/FieloPLT__Redemption__c.object
<CustomObject>
    <description>Redemptions are the orders generated by Members when they redeem their available points for Rewards.</description>
    <fields>
        <fullName>FieloPLT__Description__c</fullName>
        <description>Redemption description.</description>
        <inlineHelpText>Enter Redemption description.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Member who performed the Redemption.</description>
        <inlineHelpText>Member who performed the Redemption.</inlineHelpText>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Redemptions</relationshipLabel>
        <relationshipName>Redemptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Origin__c</fullName>
        <description>Source from which the Redemption order was generated.</description>
        <inlineHelpText>Source from which the Redemption order was generated.</inlineHelpText>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>BackEnd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FrontEnd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Points__c</fullName>
        <description>Points involved on the redemption</description>
        <label>Points</label>
        <summarizedField>FieloPLT__RedemptionItem__c.FieloPLT__Points__c</summarizedField>
        <summaryFilterItems>
            <field>FieloPLT__RedemptionItem__c.FieloPLT__Status__c</field>
            <operation>notEqual</operation>
            <value>Reverted</value>
        </summaryFilterItems>
        <summaryForeignKey>FieloPLT__RedemptionItem__c.FieloPLT__Redemption__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Status__c</fullName>
        <description>The status of this redemption. Possible status values are: Open, Closed, Pending or Rejected.</description>
        <inlineHelpText>Redemption status.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__TotalItems__c</fullName>
        <description>Quantity of items of the redemption (Order).</description>
        <label>Total Items</label>
        <summarizedField>FieloPLT__RedemptionItem__c.FieloPLT__Quantity__c</summarizedField>
        <summaryForeignKey>FieloPLT__RedemptionItem__c.FieloPLT__Redemption__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Transaction completed only when a Redemption was generated by an Instant Reward.</description>
        <inlineHelpText>Only completed when a Redemption was generated by an Instant Reward.</inlineHelpText>
        <label>Transaction</label>
        <referenceTo>FieloPLT__Transaction__c</referenceTo>
        <relationshipLabel>Redemptions</relationshipLabel>
        <relationshipName>Redemptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Redemption</label>
    <listViews>
        <fullName>FieloPLT__All</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Member__c</columns>
        <columns>FieloPLT__TotalItems__c</columns>
        <columns>FieloPLT__Origin__c</columns>
        <columns>FieloPLT__Points__c</columns>
        <columns>FieloPLT__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Redemptions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redemptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloPLT__ClosedRedemption</fullName>
        <active>false</active>
        <description>The Redemption order is closed.</description>
        <errorConditionFormula>AND(   ISPICKVAL(FieloPLT__Status__c, &apos;Closed&apos;) ,ISCHANGED(FieloPLT__Points__c) )</errorConditionFormula>
        <errorMessage>The Redemption order is closed.</errorMessage>
    </validationRules>
</CustomObject>